testing/errors/subst2.a
	*=$1000
	!set sub = [2,3]	; sub is a list
base?sub	nop	; -> "neither number nor string"
